syntax = "proto3";

import "proton/android/authenticator/proto/preferences/settings/settings_preferences_app_lock_type.proto";
import "proton/android/authenticator/proto/preferences/settings/settings_preferences_digit_type.proto";
import "proton/android/authenticator/proto/preferences/settings/settings_preferences_search_bar_type.proto";
import "proton/android/authenticator/proto/preferences/settings/settings_preferences_theme_type.proto";

option java_package = "proton.android.authenticator.proto.preferences.settings";
option java_multiple_files = true;

message SettingsPreferences {
  bool is_backup_enabled = 1;
  bool is_sync_enabled = 2;
  SettingsPreferencesAppLockType app_lock_type = 3;
  bool is_tap_to_reveal_enabled = 4;
  SettingsPreferencesThemeType theme_type = 5;
  SettingsPreferencesSearchBarType search_bar_type = 6;
  SettingsPreferencesDigitType digit_type = 7;
  bool is_code_change_animation_enabled = 8;
}
