syntax = "proto3";

option java_package = "proton.android.authenticator.proto.preferences.settings";
option java_multiple_files = true;

enum SettingsPreferencesAppLockType {
  SETTINGS_APP_LOCK_TYPE_UNSPECIFIED = 0;
  SETTINGS_APP_LOCK_TYPE_NONE = 1;
  SETTINGS_APP_LOCK_TYPE_BIOMETRIC = 2;
}
