syntax = "proto3";

option java_package = "proton.android.authenticator.proto.preferences.settings";
option java_multiple_files = true;

enum SettingsPreferencesDigitType {
  SETTINGS_DIGIT_TYPE_PLAIN = 0;
  SETTINGS_DIGIT_TYPE_BOXES = 1;
}
