syntax = "proto3";

option java_package = "proton.android.authenticator.proto.preferences.settings";
option java_multiple_files = true;

enum SettingsPreferencesSearchBarType {
  SETTINGS_SEARCH_BAR_TYPE_BOTTOM = 0;
  SETTINGS_SEARCH_BAR_TYPE_TOP = 1;
}
