syntax = "proto3";

option java_package = "proton.android.authenticator.proto.preferences.settings";
option java_multiple_files = true;

enum SettingsPreferencesThemeType {
  SETTING_THEME_TYPE_SYSTEM = 0;
  SETTING_THEME_TYPE_LIGHT = 1;
  SETTING_THEME_TYPE_DARK = 2;
}
